--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World! I am awesome
+<h1>siroop in a nutshell</h1>
+<h2>Eusi Mitarbeiter</h2>
+<p><span style="color: #00ff00;">Denny, euse Blackozilla</span></p>
+<p><span style="color: #ff0000;">Gautier euse Lumberjack</span></p>
+<p>&nbsp;</p>
